--- a/css/updated_accessible-content-mq.css
+++ b/css/updated_accessible-content-mq.css
@@ -25,7 +25,6 @@ img:hover {
 
 .flex-container-mingap {
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
